RESOLVED FIXED230146
Allow to subclass WritableStream
https://bugs.webkit.org/show_bug.cgi?id=230146
Summary Allow to subclass WritableStream
youenn fablet
Reported 2021-09-10 05:07:22 PDT
Allow to subclass WritableStream
Attachments
Patch (70.17 KB, patch)
2021-09-10 05:36 PDT, youenn fablet
no flags
Patch (67.85 KB, patch)
2021-09-10 06:14 PDT, youenn fablet
ews-feeder: commit-queue-
Patch (74.69 KB, patch)
2021-09-10 06:20 PDT, youenn fablet
no flags
Patch (76.29 KB, patch)
2021-09-10 06:26 PDT, youenn fablet
ews-feeder: commit-queue-
Patch (76.62 KB, patch)
2021-09-10 07:11 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2021-09-10 05:36:42 PDT
youenn fablet
Comment 2 2021-09-10 06:14:25 PDT
youenn fablet
Comment 3 2021-09-10 06:20:10 PDT
youenn fablet
Comment 4 2021-09-10 06:26:43 PDT
youenn fablet
Comment 5 2021-09-10 07:11:40 PDT
Radar WebKit Bug Importer
Comment 6 2021-09-10 09:29:03 PDT
EWS
Comment 7 2021-09-10 10:22:08 PDT
Committed r282278 (241556@main): <https://commits.webkit.org/241556@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 437865 [details].
Fujii Hironori
Comment 8 2021-09-12 21:27:33 PDT
This change introduced a new assertion failure for WinCairo Debug WK2 test. Filed : Bug 230208 – REGRESSION(r282278): ASSERTION FAILED: !m_needExceptionCheck in JSC::VM::verifyExceptionCheckNeedIsSatisfied
Note You need to log in before you can comment on or make changes to this bug.