Source/WebCore/Modules/mediastream/RTCRtpSFrameTransform.cpp
@@ -32,6 +32,7 @@
 #include "JSDOMConvertBufferSource.h"
 #include "JSRTCEncodedAudioFrame.h"
 #include "JSRTCEncodedVideoFrame.h"
+#include "JSWritableStreamSink.h"
 #include "Logging.h"
 #include "RTCEncodedAudioFrame.h"
 #include "RTCEncodedVideoFrame.h"
@@ -43,7 +44,6 @@
 #include "ReadableStreamSource.h"
 #include "SharedBuffer.h"
 #include "WritableStream.h"
-#include "WritableStreamSink.h"
 #include <wtf/IsoMallocInlines.h>
 
 namespace WebCore {
@@ -98,7 +98,7 @@ uint64_t RTCRtpSFrameTransform::keyIdForTesting() const
 
 bool RTCRtpSFrameTransform::isAttached() const
 {
-    return m_isAttached || (m_readable && m_readable->isLocked()) || (m_writable && m_writable->isLocked());
+    return m_isAttached || (m_readable && m_readable->isLocked()) || (m_writable && m_writable->locked());
 }
 
 static RTCRtpSFrameTransformErrorEvent::Type errorTypeFromInformation(const RTCRtpSFrameTransformer::ErrorInformation& errorInformation)
@@ -208,14 +208,18 @@ void transformFrame(Frame& frame, JSDOMGlobalObject& globalObject, RTCRtpSFrameT
     source.enqueue(toJS(&globalObject, &globalObject, frame));
 }
 
-void RTCRtpSFrameTransform::createStreams(JSC::JSGlobalObject& globalObject)
+ExceptionOr<void> RTCRtpSFrameTransform::createStreams()
 {
-    m_readableStreamSource = SimpleReadableStreamSource::create();
-    auto readable = ReadableStream::create(globalObject, m_readableStreamSource.copyRef());
-    if (readable.hasException())
-        return;
+    auto* globalObject = scriptExecutionContext() ? scriptExecutionContext()->globalObject() : nullptr;
+    if (!globalObject)
+        return Exception { InvalidStateError };
 
-    auto writable = WritableStream::create(globalObject, SimpleWritableStreamSink::create([transformer = m_transformer, readableStreamSource = m_readableStreamSource, weakThis = makeWeakPtr(this)](auto& context, auto value) -> ExceptionOr<void> {
+    m_readableStreamSource = SimpleReadableStreamSource::create();
+    auto readable = ReadableStream::create(*globalObject, m_readableStreamSource.copyRef());
+    if (readable.hasException())
+        return readable.releaseException();
+
+    auto writable = WritableStream::create(*JSC::jsCast<JSDOMGlobalObject*>(globalObject), SimpleWritableStreamSink::create([transformer = m_transformer, readableStreamSource = m_readableStreamSource, weakThis = makeWeakPtr(this)](auto& context, auto value) -> ExceptionOr<void> {
         if (!context.globalObject())
             return Exception { InvalidStateError };
         auto& globalObject = *JSC::jsCast<JSDOMGlobalObject*>(context.globalObject());
@@ -238,7 +242,7 @@ void RTCRtpSFrameTransform::createStreams(JSC::JSGlobalObject& globalObject)
         return { };
     }));
     if (writable.hasException())
-        return;
+        return writable.releaseException();
 
     m_readable = readable.releaseReturnValue();
     m_writable = writable.releaseReturnValue();
@@ -246,36 +250,26 @@ void RTCRtpSFrameTransform::createStreams(JSC::JSGlobalObject& globalObject)
         m_readable->lock();
         m_writable->lock();
     }
+    return { };
 }
 
 ExceptionOr<RefPtr<ReadableStream>> RTCRtpSFrameTransform::readable()
 {
-    auto* context = scriptExecutionContext();
-    if (!context)
-        return Exception { InvalidStateError };
-
-    auto* globalObject = context->globalObject();
-    if (!globalObject)
-        return Exception { InvalidStateError };
-
-    if (!m_readable)
-        createStreams(*globalObject);
-
+    if (!m_readable) {
+        auto result = createStreams();
+        if (result.hasException())
+            return result.releaseException();
+    }
     return m_readable.copyRef();
 }
 
 ExceptionOr<RefPtr<WritableStream>> RTCRtpSFrameTransform::writable()
 {
-    auto* context = scriptExecutionContext();
-    if (!context)
-        return Exception { InvalidStateError };
-
-    auto* globalObject = context->globalObject();
-    if (!globalObject)
-        return Exception { InvalidStateError };
-
-    if (!m_writable)
-        createStreams(*globalObject);
+    if (!m_writable) {
+        auto result = createStreams();
+        if (result.hasException())
+            return result.releaseException();
+    }
 
     m_hasWritable = true;
     return m_writable.copyRef();
