Source/WebCore/bindings/scripts/CodeGeneratorJS.pm
@@ -627,11 +627,6 @@ sub AddToIncludesForIDLType
         return;
     }
 
-    if ($type->name eq "WritableStream") {
-        AddToIncludes("WritableStream.h", $includesRef, $conditional);
-        return;
-    }
-
     if ($type->name eq "XPathNSResolver") {
         AddToIncludes("JSXPathNSResolver.h", $includesRef, $conditional);
         AddToIncludes("JSDOMConvertXPathNSResolver.h", $includesRef, $conditional);
